# mlflow-docker-compose

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mlflow.localhost  start.sh
jupyter/: Dockerfile  pyproject.toml  settings.jupyterlab-settings  shortcuts.jupyterlab-settings
mlflow/: Dockerfile  pyproject.toml
notebook/: try.ipynb  tutorial.ipynb
on_premises/: .env  Dockerfile  README.md  docker-compose.yaml  mlflow-server  sample_elasticnet_wine.py  start.sh
on_premises/example/: config.yaml  example_elasticnet_wine.py  experiment_recorder.py
